--- a/homework/Lesson3/HW_3.html
+++ b/homework/Lesson3/HW_3.html
@@ -7,6 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW 3</title>
 </head>
+<style>
+    .users-box{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+    .user-block{
+        border: 1px solid black;
+        padding: 10px;
+    }
+</style>
 <body>
 
 <script src="HW_3.js"></script>
